<resources>
    <string name="app_name">RunningApp</string>
    <string name="Rozpocznij_trening">► Rozpocznij Trening ►</string>
    <string name="Dodaj_trening">+ Dodaj Trening +</string>
    <string name="Przeglądaj_dzienniczek">Przeglądaj Dzienniczek</string>
    <string name="CzasBiegu">Czas Biegu</string>
    <string name="Dystans">Dystans</string>
    <string name="SrednieTempo">Średnie Tempo</string>
    <string name="OstatniKm">Ostatni km</string>
    <string name="Start">START</string>
    <string name="Lap">LAP</string>
    <string name="Stop">STOP</string>
    <string name="sprawnosc">Sprawnościowy</string>
    <string name="szybkosc">Elementy Szybkości</string>
    <string name="sila">Siłowy</string>
    <string name="sila_biegowa">Siła Biegowa</string>
    <string name="czas_treningu">Czas trwania</string>
    <string name="min">(min)</string>
    <string name="tresc_treningu">Treść Treningu</string>
    <string name="obciazenie_laczne">Obciążenie</string>
    <string name="kg">(łącznie kg)</string>
    <string name="metry">Pokonany dystans w metrach</string>
    <string name="data">Data wykonania</string>
    <string name="dataformat">(YYYY-MM-DD)</string>
    <string name="Zapisz">Zapisz trening</string>
    <string name="Komentarz">"Komentarz"</string>
    <string name="Dodaj_komentarz">Dodaj Komentarz</string>
    <string name="Usun_trening">Usuń Trening</string>
    <string name="zakoncz_i_zapisz">Zakończ i Zapisz</string>
    <string name="pokaz_mapa">Zobacz mapę</string>
    <string name="title_activity_maps">Map</string>
    <string name="Wybierz_rodzaj_treningu">Wybierz rodzaj treningu</string>
    <string name="wybierz_date">Dotknij, aby wybrać datę</string>
    <string name="podaj_czas">Czas treningu w minutach</string>
    <string name="uzupelnij_tresc">Uzupełnij treść treningu</string>
</resources>
