<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/Rozpocznij_trening_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:height="70dp"
        android:text="@string/Rozpocznij_trening"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Dodaj_trening_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:height="70dp"
        android:text="@string/Dodaj_trening"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Rozpocznij_trening_button" />

    <Button
        android:id="@+id/Przeglądaj_dzienniczek_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:height="70dp"
        android:text="@string/Przeglądaj_dzienniczek"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Dodaj_trening_button" />
</androidx.constraintlayout.widget.ConstraintLayout>