<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:screenOrientation="portrait"
    android:keepScreenOn="true"
    tools:context=".TreningRejestrowany">

    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="0dp"
        android:src="@drawable/header"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>



    <Chronometer
        android:id="@+id/czas_biegu_stoper_Chronometr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:format="00:00:00"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000066"
        android:textSize="70sp"
        android:textStyle="bold"
        android:keepScreenOn="true"
        android:paddingTop="25dp"
        android:background="@drawable/bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dystans_km_textView"
        android:layout_width="158dp"
        android:layout_height="73dp"
        android:height="25dp"
        android:background="@drawable/bg"
        android:gravity="center"
        android:paddingTop="5dp"
        android:text=""
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000066"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="200dp" />

    <TextView
        android:id="@+id/średnie_tempo_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:height="30dp"
        android:gravity="center_horizontal"
        android:text="@string/SrednieTempo"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000066"
        android:textSize="21sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@+id/Ostatni_km_textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <TextView
        android:id="@+id/Ostatni_km_textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:height="30dp"
        android:text="@string/OstatniKm"
        android:textAllCaps="true"
        android:textColor="#000066"
        android:textSize="21sp"
        android:textStyle="normal"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/średnie_tempo_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/średnie_tempo_textView"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/srednie_tempo_wynik_textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="25dp"
        android:height="30dp"
        android:text=""
        android:textAllCaps="false"
        android:textColor="#000066"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/Ostatni_km_wynik_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/średnie_tempo_textView"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/Ostatni_km_wynik_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:height="30dp"
        android:text=""
        android:textAllCaps="true"
        android:textColor="#000066"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/srednie_tempo_wynik_textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/srednie_tempo_wynik_textView2"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:height="40dp"
        android:gravity="center"
        android:text="@string/Start"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/my_app_color_on_secondary"
        android:textSize="25sp"
        android:textStyle="bold"
        android:background="@drawable/button_design_blue"
        app:layout_constraintEnd_toStartOf="@+id/lap_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/srednie_tempo_wynik_textView2" />

    <Button
        android:id="@+id/lap_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:height="40dp"
        android:gravity="center"
        android:text="@string/Lap"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/my_app_color_on_secondary"
        android:textSize="25sp"
        android:textStyle="bold"
        android:background="@drawable/button_design_blue"
        app:layout_constraintEnd_toStartOf="@+id/stop_button"
        app:layout_constraintStart_toEndOf="@+id/start_button"
        app:layout_constraintTop_toBottomOf="@+id/srednie_tempo_wynik_textView2" />

    <Button
        android:id="@+id/stop_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:height="40dp"
        android:text="@string/Stop"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/my_app_color_on_secondary"
        android:textSize="25sp"
        android:textStyle="bold"
        android:background="@drawable/button_design_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lap_button"
        app:layout_constraintTop_toBottomOf="@+id/Ostatni_km_wynik_textView"
        android:gravity="center" />

    <Button
        android:id="@+id/zakoncz_i_zapisz_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:height="40dp"
        android:text="@string/zakoncz_i_zapisz"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/my_app_color_on_secondary"
        android:textSize="25sp"
        android:textStyle="bold"
        android:enabled="false"
        android:background="@drawable/button_design_blue_recentagle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lap_button"
        android:gravity="center" />
    <TextView
        android:id="@+id/ostatni_lap_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:height="40dp"
        android:text=""
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000066"
        android:textSize="25sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zakoncz_i_zapisz_button"
        android:gravity="center_horizontal" />

</androidx.constraintlayout.widget.ConstraintLayout>